fix: pop-up permission issue, align icon with error text and show the logout button in iFrame dashbord AB#28181

--- a/interfaces/Portal/src/app/pages/login/login.page.scss
+++ b/interfaces/Portal/src/app/pages/login/login.page.scss
@@ -1,4 +1,13 @@
-.error-message-container {
+.error-message {
   margin-top: 0.5rem;
   font-size: 0.875rem;
+}
+
+.error-message--text {
+  display: flex;
+  align-items: center;
+}
+
+.error-message--text ion-icon {
+  margin-right: 0.2rem;
 }
